--- a/src/main/resources/templates/email-validation-template.html
+++ b/src/main/resources/templates/email-validation-template.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="fr">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <body style="font-family: Calibri, sans-serif">
 <header>
-    <h1 th:text="${greeting}" style="color: rgb(45,109,110)">Merci!</h1>
+    <h1 style="color: rgb(45,109,110)" th:text="${greeting}">Merci!</h1>
 </header>
 <main>
     <p>
-        Merci d’avoir rapporté vos déchets de pesticides au recyparc ! Dès que notre équipe aura validé votre photo, un kit de semences locales et biologiques Cycle-en-terre vous sera envoyé par la poste.
+        Merci d’avoir rapporté vos déchets de pesticides au recyparc ! Dès que notre équipe aura validé votre photo, un
+        kit de semences locales et biologiques Cycle-en-terre vous sera envoyé par la poste.
     </p>
     <p>
-        Et pour vous remercier de votre geste pour l’environnement, le 21 juin, un tirage au sort désignera un·e gagnant·e d’un bon cadeau de 200 € à dépenser en jardinerie labellisée "Jardiner Sans Pesticides". Le bon sera envoyé au·à la gagnant·e par mail. <span style="color: rgb(45,109,110)">Bonne chance!</span>
+        Et pour vous remercier de votre geste pour l’environnement, le 21 juin, un tirage au sort désignera un·e
+        gagnant·e d’un bon cadeau de 200 € à dépenser en jardinerie labellisée "Jardiner Sans Pesticides". Le bon sera
+        envoyé au·à la gagnant·e par mail. <span style="color: rgb(45,109,110)">Bonne chance!</span>
     </p>
     <p>
-        Pour découvrir les jardineries labellisées "Jardiner Sans Pesticides" sans plus attendre, rendez-vous sur <a href="https://www.jardinersanspesticides.be" style="color: rgb(45,109,110)">www.jardinersanspesticides.be</a>
+        Pour découvrir les jardineries labellisées "Jardiner Sans Pesticides" sans plus attendre, rendez-vous sur <a
+            href="https://www.jardinersanspesticides.be"
+            style="color: rgb(45,109,110)">www.jardinersanspesticides.be</a>
     </p>
     <p>
-        Si vous souhaitez continuer à en apprendre plus sur le jardinage durable ou si vous vous posez des questions à ce propos, rendez-vous sur notre site web <a href="https://www.corder.be" style="color: rgb(45,109,110)">www.corder.be</a> ou par mail à <a href="mailto:info@corder.be" style="color: rgb(45,109,110)">info@corder.be</a> 🌱
+        Si vous souhaitez continuer à en apprendre plus sur le jardinage durable ou si vous vous posez des questions à
+        ce propos, rendez-vous sur notre site web <a href="https://www.corder.be" style="color: rgb(45,109,110)">www.corder.be</a>
+        ou par mail à <a href="mailto:info@corder.be" style="color: rgb(45,109,110)">info@corder.be</a> 🌱
     </p>
     <div style="text-align: right">
         <p>
@@ -23,7 +30,8 @@
             L'asbl CORDER
         </p>
         <p style="font-style: italic">
-            L’asbl CORDER s’intègre dans une série de démarches visant à favoriser la protection durable des végétaux en Wallonie
+            L’asbl CORDER s’intègre dans une série de démarches visant à favoriser la protection durable des végétaux en
+            Wallonie
         </p>
     </div>
 </main>
